--- a/cal.html
+++ b/cal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator_demo</title>
-    <link rel="stylesheet" href="cal.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
 
@@ -40,7 +40,7 @@
                    <input type="button" value = '=' onclick = "Result()">
                 </div>
              </div>
-             <script src = 'cal.js' ></script>
+             <script src = '' ></script>
           </body>
 
 </body>
